--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "debug": "node debug app.js",
-    "build": "browserify -t [ babelify --presets [  stage-0 react ] ] ./app/yumist.js -o ./public/js/bundle.js",
+    "build": "browserify -t [ babelify --presets [  stage-0 react ] ] ./app/yumist.js -o ./public/bundle.js",
     "start": "npm run build && node index.js"
   },
   "keywords": [
@@ -17,30 +17,30 @@
   "author": "pyadav9678@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.3.15",
-    "babel-polyfill": "^6.3.14",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "body-parser": "^1.14.1",
-    "compression": "^1.6.0",
-    "cookie-parser": "^1.4.0",
-    "ejs": "^2.3.4",
-    "express": "^4.13.3",
-    "lodash": "^3.10.1",
-    "morgan": "^1.6.1",
-    "mysql": "^2.9.0",
-    "react": "^0.14.3",
-    "react-bootstrap": "^0.28.1",
-    "react-dom": "^0.14.3",
-    "react-redux": "^4.0.0",
-    "react-router": "^1.0.2",
-    "redux": "^3.0.4",
-    "redux-logger": "^2.2.1",
-    "redux-router": "^1.0.0-beta5",
-    "redux-thunk": "^1.0.0"
+    "babel-core": "6.3.15",
+    "babel-polyfill": "6.3.14",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "6.3.13",
+    "babel-preset-stage-0": "6.3.13",
+    "body-parser": "1.14.1",
+    "compression": "1.6.0",
+    "cookie-parser": "1.4.0",
+    "ejs": "2.3.4",
+    "express": "4.13.3",
+    "lodash": "3.10.1",
+    "morgan": "1.6.1",
+    "mysql": "2.9.0",
+    "react": "0.14.3",
+    "react-bootstrap": "0.28.1",
+    "react-dom": "0.14.3",
+    "react-redux": "4.0.0",
+    "react-router": "1.0.2",
+    "redux": "3.0.4",
+    "redux-logger": "2.2.1",
+    "redux-router": "1.0.0-beta5",
+    "redux-thunk": "1.0.0"
   },
   "devDependencies": {
-    "babelify": "^7.2.0"
+    "babelify": "7.2.0"
   }
 }
